--- a/themes/custom/masradix/scss/components/_form.scss
+++ b/themes/custom/masradix/scss/components/_form.scss
@@ -2,9 +2,6 @@
 // -----------------------------------------------------------------------------
 
 
-.form-group {
-  margin-bottom: 30px
-}
 
 .views-exposed-form .form-group { 
   margin-bottom: 10px
@@ -161,7 +158,12 @@ p#edit-field-request-image-0-upload--description .visible {
     padding: 15px
 }
 
-
+#edit-body-0--description {
+    display: block;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    color: #8c8c8c;
+}
 
 label.image-widget-data.btn.btn-block.btn-default {
     border: 1px #ddd dashed;
